<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bodybg"  >
    <LinearLayout android:id="@+id/bottom_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@color/bottombgcolor"         
        android:orientation="vertical" android:layout_alignParentBottom="true">		 
        <TextView
            android:id="@+id/homeBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="onClick" 
            android:text="@string/credit"   
            android:textColor="@color/fg"                
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/top_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"         
        android:layout_alignParentTop="true" android:background="@drawable/titlebg" >
	    
	     <Button android:id="@+id/backbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/back"
	        android:textColor="@color/white"
	        android:padding="10dp"
	        android:layout_margin="5dp"
	        android:onClick="goHome"
	        android:background="@drawable/backbutton"
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" />
	   <TextView
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" 
	        android:id="@+id/title"
	        android:textColor="@color/white"
	        android:text="@string/add_block"
	        android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textSize="25sp"
	        />
    </LinearLayout>
    <ScrollView
        android:id="@+id/sub_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_menu"
        android:layout_above="@id/bottom_menu"
        android:orientation="vertical"
        android:padding="15dp"
        >
	    <LinearLayout
        android:id="@+id/form_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusable="false" 
		android:focusableInTouchMode="true"
        >
        <Spinner
	            android:id="@+id/phoneSp"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:background="@drawable/bodybg"
	             />
	        <Button
	            android:id="@+id/phonebutton"
	            android:onClick="ContactonClick" 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_select"
	            android:textColor="@color/grey"
	            android:layout_marginTop="8dp"
	            android:padding="10dp"
	            android:background="@drawable/whitebg"
	            android:drawableRight="@drawable/select_button"
	            />
	        <TextView
		        android:gravity="center|center_horizontal"
		        android:id="@+id/orphone"
		        android:text="@string/or"
		        android:textColor="@color/white"
		        android:textStyle="bold"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:layout_marginTop="8dp"
	        
	        />
	        <EditText
	            android:id="@+id/phone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	             android:textColor="@color/grey"
	            android:layout_marginTop="8dp"
	            android:padding="10dp"
	             android:background="@drawable/whitebg"
	            android:hint="@string/suggest_phone"
	            android:inputType="phone"
	          >

	        </EditText>
	        <EditText
	            android:id="@+id/name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:visibility="gone"
	            android:inputType="text"
	          />
	        <CheckBox
	            android:id="@+id/blockCall"
	            android:layout_marginTop="8dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/block_call" />

	        <CheckBox
	            android:id="@+id/blockText"
	            android:layout_marginTop="8dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/block_text" />

	        <Button
	            android:id="@+id/save"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="@color/white"
	            android:padding="10dp"
	            android:textStyle="bold"
	            android:text="@string/save"
	            android:layout_marginTop="10dp"
	            android:layout_marginBottom="15dp"
	            android:background="@drawable/buttonbg"
	           />      
        </LinearLayout>	     
    </ScrollView>
</RelativeLayout>