<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bodybg"  >
    <LinearLayout android:id="@+id/bottom_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@color/bottombgcolor"         
        android:orientation="vertical" android:layout_alignParentBottom="true">		 
        <TextView
            android:id="@+id/homeBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="onClick" 
            android:text="@string/credit"  
            android:textColor="@color/fg"                 
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/top_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"         
        android:layout_alignParentTop="true" android:background="@drawable/titlebg" >
	    
	     <Button android:id="@+id/backbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/back"
	        android:textColor="@color/white"
	        android:padding="10dp"
	        android:layout_margin="5dp"
	        android:onClick="goHome"
	        android:background="@drawable/backbutton"
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" />
	   <TextView
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" 
	        android:id="@+id/title"
	        android:textColor="@color/white"
	        android:text="@string/list_block"
	        android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:textSize="25sp"
	        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sub_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_menu"
        android:layout_above="@id/bottom_menu"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >
	    <Button
	        android:id="@+id/delete_all"
	        android:textColor="@color/white"
	        android:text="@string/delete_all"
	        android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="6dp"
		    android:background="@drawable/backbutton"
		    android:onClick="deleteAll"
	        />
	    <ListView
		    android:id="@+id/listview_episodes"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:divider="#243A01"
		    android:dividerHeight="1dp"
		    android:paddingTop="5dp"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp" >
		</ListView>
    </LinearLayout>
</RelativeLayout>