<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bodybg"  >
    <LinearLayout android:id="@+id/bottom_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@color/bottombgcolor"         
        android:orientation="vertical" android:layout_alignParentBottom="true">		 
        <TextView
            android:id="@+id/homeBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="onClick" 
            android:text="@string/credit"  
            android:textColor="@color/fg"                 
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/top_menu"
        android:layout_width="fill_parent" android:layout_height="wrap_content"         
        android:layout_alignParentTop="true" android:background="@drawable/titlebg" >
	     <Button android:id="@+id/backbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/back"
	        android:textColor="@color/white"
	        android:padding="10dp"
	        android:layout_margin="5dp"
	        android:onClick="goHome"
	        android:background="@drawable/backbutton"
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" />
	   <ImageView
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center"
	        android:id="@+id/titleimageView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/header_logo2"
	        android:contentDescription="@string/app_name"
	         />
    </LinearLayout>
    <ScrollView
        android:id="@+id/sub_content_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_menu"
        android:layout_above="@id/bottom_menu"
        android:orientation="vertical"
		android:scrollbarThumbVertical="@drawable/bodybg"
        >
	    <LinearLayout
        android:id="@+id/form_content_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
	        android:gravity="center|center_horizontal"
	        android:layout_gravity="center" 
	        android:id="@+id/title"
	        android:textColor="@color/white"
	        android:text="@string/add_block"
	        android:textStyle="bold"
	        android:layout_margin="10dp"
	        android:background="@drawable/round_bg"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        />
       <WebView 
		    android:id="@+id/webView1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		/>     
        </LinearLayout>	     
    </ScrollView>
</RelativeLayout>