<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_weight="1">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/bodybg"
	     >	
	    <TextView
	        android:id="@+id/to_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:textStyle="bold"
	        android:textColor="@color/white"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginBottom="4dp"
	        />
	    <TextView
	        android:id="@+id/to_number"
	        android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:text="@string/app_name"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="4dp"
	        />
	    <TextView
	        android:id="@+id/sms"
	        android:layout_width="fill_parent"
	        android:textColor="@color/white"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        /> 
	    <TextView
	        android:id="@+id/to_date"
	        android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:text="@string/app_name"
	        android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        />

	  <LinearLayout
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:gravity="center|center_horizontal"
	      android:orientation="horizontal"
	      android:layout_marginTop="10dp"
	      android:layout_marginBottom="15dp" >
			<Button
				  android:id="@+id/delete"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/delete"
				  android:textStyle="bold"
				  android:layout_marginRight="5dp"
				  android:gravity="center|center_horizontal"
				  android:textColor="@color/white"
				  android:background="@drawable/backbutton"
				  android:padding="5dp"
			   />
			<Button
				  android:id="@+id/close"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/close"
				  android:textStyle="bold"
				  android:layout_marginRight="5dp"
				  android:gravity="center|center_horizontal"
				  android:textColor="@color/white"
				  android:background="@drawable/backbutton"
				  android:padding="5dp"
			   />
	  </LinearLayout>
   </LinearLayout>
</ScrollView>